--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@
   overflow-y: scroll;
 }
 .scroll-y::-webkit-scrollbar {
-  display: none;
+
 }
 .scale {
   transition: all .3s ease-in-out;
@@ -56,12 +56,16 @@
   -webkit-box-orient: vertical;
 }
 
+/* keranjang */
+.footer-keranjang {
+  box-shadow:0 0 10px 10px rgba(0, 0, 0, .03);
+}
+
 @media screen and (width <= 640px)  {
   .plan-your-trip {
     justify-content: center;
-    position: absolute;
+    position: relative;
     top: 100%;
-    right: 20%;
-    left: 20%;
+    
   }
 }
